.provarCaches/00D5f000005vwGkEAI/objects/rstk__confdcomp__c.object
<CustomObject>
    <description>confdcomp__c</description>
    <fields>
        <fullName>rstk__confdcomp_adjustqty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Enter Qty at Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_altprice1hc__c</fullName>
        <formula>IF(rstk__confdcomp_confsess__r.rstk__confsess_custcurrency__c,  IF( ISNULL(rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdcomp_altprice__c , rstk__confdcomp_altprice__c/ rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c), rstk__confdcomp_altprice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_altprice2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_altprice2cc__c</fullName>
        <formula>IF(rstk__confdcomp_confsess__r.rstk__confsess_custcurrency__c, rstk__confdcomp_altprice2__c ,  IF( ISNULL(rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdcomp_altprice2__c , rstk__confdcomp_altprice2__c * rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_altprice2hc__c</fullName>
        <formula>IF(rstk__confdcomp_confsess__r.rstk__confsess_custcurrency__c,  IF( ISNULL(rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdcomp_altprice2__c, rstk__confdcomp_altprice2__c/ rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c), rstk__confdcomp_altprice2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_altprice__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_altpricecc__c</fullName>
        <formula>IF(rstk__confdcomp_confsess__r.rstk__confsess_custcurrency__c, rstk__confdcomp_altprice__c ,  IF( ISNULL(rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdcomp_altprice__c , rstk__confdcomp_altprice__c * rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_calculatedprice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_confcomp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source Selection Component</label>
        <referenceTo>rstk__confcomp__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_confdsel2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Second Selection</label>
        <referenceTo>rstk__confdsel__c</referenceTo>
        <relationshipLabel>Configuration Session Components (Second Selection)</relationshipLabel>
        <relationshipName>confdcomps_confdsel2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_confdsel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Derived Selection</label>
        <referenceTo>rstk__confdsel__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_confsess__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Configuration Session</label>
        <referenceTo>rstk__confsess__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_extaltprice2__c</fullName>
        <formula>IF( ISPICKVAL(rstk__confdcomp_itemtype__c, &apos;Labor&apos;) , (rstk__confdcomp_sumlabhours__c * rstk__confdcomp_altprice2__c * rstk__confdcomp_qtyper__c), (rstk__confdcomp_altprice2__c * rstk__confdcomp_qtyper__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Alternate Price 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_extaltprice__c</fullName>
        <formula>IF( ISPICKVAL(rstk__confdcomp_itemtype__c, &apos;Labor&apos;) , (rstk__confdcomp_sumlabhours__c * rstk__confdcomp_altprice__c * rstk__confdcomp_qtyper__c), (rstk__confdcomp_altprice__c * rstk__confdcomp_qtyper__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Alternate Price 1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_extcomment__c</fullName>
        <label>Order Line External Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_extcost__c</fullName>
        <formula>rstk__confdcomp_cost__c * rstk__confdcomp_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_extlabprice__c</fullName>
        <formula>IF(ISPICKVAL(rstk__confdcomp_pricemethod__c, &apos;Cost Plus Markup&apos;), 
(( rstk__confdcomp_rtindoper__r.rstk__rtindoper_sethours__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_setlabgrd__r.rstk__rtlabgrd_hrrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	)) +
( rstk__confdcomp_rtindoper__r.rstk__rtindoper_runhours__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_runlabgrd__r.rstk__rtlabgrd_hrrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	)) +

( rstk__confdcomp_rtindoper__r.rstk__rtindoper_sethours__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_setlabgrd__r.rstk__rtlabgrd_hrrate__c *
          rstk__confdcomp_rtindoper__r.rstk__rtindoper_rtwctr__r.rstk__rtwctr_dept__r.rstk__rtdept_ohdlabrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	)) +
( rstk__confdcomp_rtindoper__r.rstk__rtindoper_runhours__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_runlabgrd__r.rstk__rtlabgrd_hrrate__c *
          rstk__confdcomp_rtindoper__r.rstk__rtindoper_rtwctr__r.rstk__rtwctr_dept__r.rstk__rtdept_ohdlabrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	)) +

( rstk__confdcomp_rtindoper__r.rstk__rtindoper_sethours__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_setlabgrd__r.rstk__rtlabgrd_hrrate__c *
          rstk__confdcomp_rtindoper__r.rstk__rtindoper_rtwctr__r.rstk__rtwctr_dept__r.rstk__rtdept_ohdfrngrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	)) +
( rstk__confdcomp_rtindoper__r.rstk__rtindoper_runhours__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_runlabgrd__r.rstk__rtlabgrd_hrrate__c *
          rstk__confdcomp_rtindoper__r.rstk__rtindoper_rtwctr__r.rstk__rtwctr_dept__r.rstk__rtdept_ohdfrngrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	)) +


( rstk__confdcomp_rtindoper__r.rstk__rtindoper_machhr__c * 
	(rstk__confdcomp_rtindoper__r.rstk__rtindoper_rtmach__r.rstk__rtmach_ohdrate__c *
	  (1 + rstk__confdcomp_markuppct__c)	))),
(((rstk__confdcomp_rtindoper__r.rstk__rtindoper_sethours__c + rstk__confdcomp_rtindoper__r.rstk__rtindoper_runhours__c) * rstk__confdcomp_pricehr__c) + ( rstk__confdcomp_rtindoper__r.rstk__rtindoper_machhr__c * rstk__confdcomp_rtindoper__r.rstk__rtindoper_machpricehr__c )) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Labor Component Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_extprice__c</fullName>
        <formula>rstk__confdcomp_price__c * rstk__confdcomp_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_feature__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Feature</label>
        <referenceTo>rstk__feature__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_firm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_fixedqty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Fixed Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_formula__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Formula with Variables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_formulav__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Formula with Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_grouppseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Group Selection Sequence</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_intcomment__c</fullName>
        <label>Order Line Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Miscellaneous Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_itemtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_labseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_markuppct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Markup Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_noexport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Session Only - No Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_noprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Print on Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component is Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_ownsoline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Output to Individual Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_prformula__c</fullName>
        <label>Price Formula with Variables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_prformulav__c</fullName>
        <label>Price Formula with Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_priceadjuster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Adjusting Misc Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricecalcbase__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Calculated Price Basis</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricecalcdisc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Calculated Price Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricecc__c</fullName>
        <formula>IF(rstk__confdcomp_confsess__r.rstk__confsess_custcurrency__c, rstk__confdcomp_price__c ,  IF( ISNULL(rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdcomp_price__c , rstk__confdcomp_price__c * rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricehc__c</fullName>
        <formula>IF(rstk__confdcomp_confsess__r.rstk__confsess_custcurrency__c,  IF( ISNULL(rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdcomp_price__c , rstk__confdcomp_price__c / rstk__confdcomp_confsess__r.rstk__confsess_currexchrate__c), rstk__confdcomp_price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricehr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Labor Price per Hour</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricemethod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Prices</fullName>
                </value>
                <value>
                    <fullName>Specified Price</fullName>
                </value>
                <value>
                    <fullName>Source Entity</fullName>
                </value>
                <value>
                    <fullName>Cost Plus Markup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_pricesrce__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price Source</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Per</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_rtindoper__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Operation</label>
        <referenceTo>rstk__rtindoper__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_seldefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected by Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_selseq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_servicedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_soprod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Number</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_soservice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Item</label>
        <referenceTo>rstk__soservice__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_sumlabhours__c</fullName>
        <label>Sum of Labor Hours</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_syacc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Credit Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_syuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Configuration Session Components</relationshipLabel>
        <relationshipName>confdcomps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_useformula__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use formula for quantity</inlineHelpText>
        <label>Use Formula for Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdcomp_useprformula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Formula for Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__confdcomp_confdsel__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__confdcomp_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__confdcomp_confdsel__r.Name + rstk__confdcomp_desc__c, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configuration Session Components</label>
    <listViews>
        <fullName>rstk__RS_Configuration_Session_Components</fullName>
        <columns>NAME</columns>
        <columns>rstk__confdcomp_confcomp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__confdcomp_rtindoper__c</columns>
        <columns>rstk__confdcomp_pricemethod__c</columns>
        <columns>rstk__confdcomp_price__c</columns>
        <columns>rstk__confdcomp_pricehr__c</columns>
        <columns>rstk__confdcomp_extprice__c</columns>
        <columns>rstk__confdcomp_extlabprice__c</columns>
        <columns>rstk__confdcomp_qtyper__c</columns>
        <columns>rstk__confdcomp_extcost__c</columns>
        <columns>rstk__confdcomp_cost__c</columns>
        <columns>rstk__confdcomp_pricesrce__c</columns>
        <columns>rstk__confdcomp_icitem__c</columns>
        <columns>rstk__confdcomp_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Configuration Session Components</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Session Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Negative_Price</fullName>
        <active>true</active>
        <description>Price cannot be greater than zero</description>
        <errorConditionFormula>NOT(rstk__confdcomp_priceadjuster__c) &amp;&amp; rstk__confdcomp_soprod__c != null &amp;&amp; rstk__confdcomp_soprod__r.rstk__soprod_linecreditfrm__c = true &amp;&amp;  rstk__confdcomp_price__c &gt; 0</errorConditionFormula>
        <errorMessage>Price cannot be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Positive_Price</fullName>
        <active>true</active>
        <description>Price cannot be less than zero</description>
        <errorConditionFormula>NOT(rstk__confdcomp_priceadjuster__c) &amp;&amp; (rstk__confdcomp_soprod__c == null || (rstk__confdcomp_soprod__c != null &amp;&amp; rstk__confdcomp_soprod__r.rstk__soprod_linecreditfrm__c = false)) &amp;&amp;  rstk__confdcomp_price__c &lt; 0</errorConditionFormula>
        <errorMessage>Price cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>